--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>kamran Portfolio</title>
+    <title>Adnan Gul</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -142,7 +142,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
       <div class="container">
-        <a class="navbar-brand" href="index.html">M kamran</a>
+        <a class="navbar-brand" href="index.html">Adnan Gul</a>
         <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="oi oi-menu"></span>
           Menu
@@ -192,7 +192,7 @@
                 <div class="text">
                   <span class="subheading">Hello!</span>
                   <h1 class="mb-4 mt-3">I'm
-                    <span>Muhammad Kamran</span></h1>
+                    <span>Adnan Gul</span></h1>
 
                   <!-- Element to contain animated typing -->
                   <span id="typing-animation"></span>
@@ -202,7 +202,7 @@
                     const typingAnimationElement = document.getElementById('typing-animation');
 
                     // Create an array of typing text
-                    const typingTexts = ['React & Next JS Developer     ', 'Wordpress Developer     ', 'Bubble.io Developer'    ];
+                    const typingTexts = ['React & Next JS Developer     ', 'Wordpress Developer     '   ];
 
                     // Create a function to display the typing animation for a given text
                     function playTypingAnimation(text) {
