--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                 Copyright &copy;<script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | M-kamran 
+                All rights reserved | Adnan Gul
                 <i class="icon-heart color-danger" aria-hidden="true"></i>
                
               </p>
