--- a/index.html
+++ b/index.html
@@ -135,7 +135,13 @@
   margin-bottom: 12px;
 }
 
+.homeimg{
+  height: 95%;
+  background-repeat: no-repeat;
+  background-image:url(images/gul.png.png);
+  background-position: center;background-size: contain;
 
+}
     </style>
 
   </head>
@@ -187,7 +193,7 @@
           <div class="overlay"></div>
           <div class="container">
             <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-              <div class="one-third js-fullheight mb-3 order-sm-last img"  style="background-image:url(images/ad.png);">
+              <div class="one-third   order-sm-last homeimg" >
                 <div class="overlay"></div>
               </div>
               <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
