--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         }
 
         .about-img img {
-          content: url("images/ad.png");
+          content: url("images/gul.png.png");
         }
 
       }
