--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
       }
       @media (max-width: 767px) {
-            .one-third.js-fullheight.img {
+            .homeimg {
                 display: none;
             }}
             .work-section{
